# event-driven-market-engine

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: sample_events.csv
data/fixtures/: aapl_1d_jan2024.csv
event_trading_engine/adapters/: base.py  yfinance_provider.py
event_trading_engine/app/api/: app.py  dependencies.py  schemas.py
event_trading_engine/app/api/routers/: portfolio.py  runs.py  strategies.py  trades.py
event_trading_engine/app/db/: models.py  session.py
event_trading_engine/app/repositories/: backtest_repository.py
event_trading_engine/app/services/: simulation_service.py
event_trading_engine/engine/: backtest.py  events.py  execution.py  metrics.py  portfolio.py  risk.py  strategy.py
event_trading_engine/streaming/: consumer.py  producer.py  schemas.py  state_cache.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/pages/: NewRunPage.tsx  RunDetailPage.tsx  RunsPage.tsx
scripts/: benchmark.py  consume.py  fetch_historical.py  produce.py  seed.py
tests/: conftest.py  test_adapters.py  test_api.py  test_backtest.py  test_events.py  test_execution.py  test_portfolio.py  test_repositories.py  test_risk.py  test_simulation_service.py  test_strategy.py  test_streaming.py
