[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-trading-engine"
version = "0.1.0"
description = "Event-driven trading simulation engine — backtest core, PostgreSQL persistence, streaming, API, and dashboard"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "confluent-kafka>=2.3",
    "redis[hiredis]>=5.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "fakeredis>=2.21",
    "httpx>=0.27",
]
historical = [
    "yfinance>=0.2",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["event_trading_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042", "UP017"]
